Lk is polished a little bit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 9080
+spring:
+  datasource:
+    url: jdbc:ignite:thin://localhost:10800
+    driver-class-name: org.apache.ignite.IgniteJdbcThinDriver
+  session:
+    store-type: jdbc
